--- a/Default.htm
+++ b/Default.htm
@@ -1,31 +1,1 @@
-<html>
-<head>
-<title>ATWSS Site</title>
-</head>
-<body>
-<p>
-<img border="0" src="https://webservices.web.cern.ch/webservices/Images/cernlogo.jpg" alt="CERN Logo" align="bottom">
-
-<b><font size="5">&nbsp;&nbsp;&nbsp;&nbsp; Welcome to ATWSS </font>
-</p>
-<hr>
-<font size="3">
-<p>
-This is the default page of the site <a href="http://cern.ch/ATWSS">http://cern.ch/ATWSS</a>
-</p>
-<p>This web site is owned by the account <a href="https://cern.ch/cernaccount/CERNAccount/AccountStatus.aspx?login=duns">duns</a>
-</p>
-<p>
-This web site is supposed to contain: </font>
-</p>
-<p><font size="4">&nbsp;&nbsp; Atlas Wireless Safety System</font></b></p>
-<hr>
-<p>
-This page should be deleted and replaced by the real one.<br><br>
-To do so, you should edit the file <a href="http://atwss.web.cern.ch/ATWSS/default.htm">http://atwss.web.cern.ch/ATWSS/default.htm</a>
-</p>
-<hr>
-<p>Site created by <a href="http://cern.ch/WebServices">CERN Web Services</a> on Thursday, March 14, 2013 3:26 PM
-</p>
-</body>
-</html>
+<meta HTTP-EQUIV="REFRESH" content="0; url=index.php">
